feat: Implement Director Management functionality
- Added Director entity with fields for fullname, biography, avatar, and date of birth.
- Created DirectorRepository for database interactions.
- Developed DirectorService and DirectorServiceImpl for business logic related to directors.
- Implemented DirectorController for handling HTTP requests related to director operations.
- Added DTOs for Director creation and update requests, as well as responses.
- Established MovieDirector entity to manage the many-to-many relationship between movies and directors.
- Created MovieDirectorRepository for managing movie-director relationships.
- Updated MovieServiceImpl to handle directors in movie creation and updates.
- Added database migration scripts to create director and movie_director tables.
- Enhanced MovieUtils to include director information in movie responses.